# SimVQAPP

./: .gitignore  README.md  package-lock.json  package.json  plan.md  pyproject.toml
electron/: main.js  preload.js
electron/assets/default-models/: simvq-v45-3x-1200000.json
electron/backend/: default-models.js  simvq-cli.js  store.js  task-manager.js
electron/renderer/: app.js  index.html  styles.css
electron/scripts/: smoke.cjs
src/simvq/: bundle.py  chunking.py  codec.py  errors.py  model_store.py  pod5_templates.py  runtime.py  types.py
src/simvq/_simvqgan/: __init__.py  decoder.py  encoder.py  factory.py  model.py  quantize.py  transformer.py
src/simvq/cli/: decode.py  doctor.py  encode.py  inspect.py  main.py  model.py
tests/: test_bundle.py  test_chunking.py  test_model_store.py  test_runtime.py
