[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "simvq"
version = "0.1.0"
description = "CLI-first inference companion for SimVQ models"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "GHSSHG" }
]
dependencies = [
  "numpy>=1.26",
  "pod5>=0.3",
  "jax>=0.9",
  "flax>=0.10",
  "orbax-checkpoint>=0.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
simvq = "simvq.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/simvq"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
